--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@vercel/node": "^5.5.4",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "electron": "^38.3.0",
@@ -77,7 +78,9 @@
       {
         "from": "dist/server",
         "to": "server",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
