Fix database path for Railway - SQLite works on Railway, not Vercel

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "npm run build:server && npm run build:react",
     "build:vercel": "npm run build:server && npm run build:react",
     "build:railway": "npm run build:server && npm run build:react",
+    "postinstall": "npm run build:server && npm run build:react",
     "build:server": "tsc --project tsconfig.server.json",
     "build:react": "vite build",
     "build:electron": "tsc --project tsconfig.electron.json",
