--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
-    "better-sqlite3": "^11.7.0",
+    "@supabase/supabase-js": "^2.79.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "exceljs": "^4.4.0",
@@ -46,7 +46,6 @@
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^20.11.0",
