--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,38 @@
 # Dependencies
 node_modules/
-package-lock.json
+/.pnp
+.pnp.js
 
-# Build outputs
-dist/
-release/
+# Testing
+/coverage
 
-# Environment variables
-.env
-.env.local
-.env.production
+# Next.js
+/.next/
+/out/
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Production
+/build
 
-# OS
+# Misc
 .DS_Store
-Thumbs.db
+*.pem
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
-database.db
-
-# Logs
-*.log
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Temporary files
-*.tmp
-*.temp
+# Local env files
+.env*.local
+.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.cursor/
+
