feat: Complete Supabase integration and major improvements
- Integrated Supabase for cloud database and multi-device access
- Added print receipt feature for sold phones (reprint from inventory)
- Added branding 'iWorld Store' in header
- Centered navigation menu
- Updated all app titles and branding
- Added promotion text to receipts: 'Software by Nabeel; 03443814208'
- Enhanced credit system with payment history
- Added resale tracking and return type support
- Improved UI/UX with better layouts
- Fixed React warnings and build issues
- Added comprehensive setup guides and documentation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "iPhone POS System",
-  "short_name": "Phone POS",
+  "name": "iWorld Store",
+  "short_name": "iWorld Store",
   "description": "Phone inventory and sales management system",
   "start_url": "/",
   "display": "standalone",
